--- a/src/@memo/design/tools/vars.css
+++ b/src/@memo/design/tools/vars.css
@@ -1,6 +1,6 @@
 :root {
   --red: #c40909;
-  --dark: #333333;
+  --dark: #5b5252;
   --dark-pink: #f18b8b;
   --light-pink: #e4cbcb;
   --white: #ffffff;
