--- a/src/@memo/pages/Home/components/Cards/Cards.module.css
+++ b/src/@memo/pages/Home/components/Cards/Cards.module.css
@@ -1,21 +1,81 @@
-.grid {
+.cards {
+  padding: 20px 0 10px;
   display: grid;
   justify-content: center;
   width: 100%;
-  grid-template-columns: repeat(6, minmax(100px, 120px));
-  grid-template-rows: repeat(3, minmax(100px, 120px));
-  gap: 20px;
-}
-
-.grid img {
-  width: 100%;
   height: 100%;
-  transition: all ease 0.5s;
+  gap: 1rem;
+
+  img,
+  div {
+    width: 100%;
+    height: auto;
+    transition: all 0.5s ease;
+  }
+
+  div {
+    background-color: var(--basic);
+    border-radius: 50%;
+    border: 0;
+    aspect-ratio: 1 / 1;
+  }
 }
 
-.grid div {
-  background-color: #f1f1f1;
-  border-radius: 50%;
-  border: 0;
-  transition: all ease 0.5s;
+.cards--small {
+  padding-top: 70px;
+  gap: 2rem;
+  grid-template-columns: repeat(2, 80px);
+  grid-auto-rows: 80px;
+}
+
+.cards--medium {
+  padding-top: 50px;
+  gap: 1.5rem;
+  grid-template-columns: repeat(3, 70px);
+  grid-auto-rows: 70px;
+}
+
+.cards--large {
+  gap: 1rem;
+  grid-template-columns: repeat(3, 60px);
+  grid-auto-rows: 60px;
+}
+
+@media (min-width: 767px) {
+  .cards--small {
+    padding-top: 50px;
+    gap: 3rem;
+    grid-template-columns: repeat(3, 110px);
+    grid-auto-rows: 110px;
+  }
+
+  .cards--medium {
+    padding-top: 30px;
+    gap: 2rem;
+    grid-template-columns: repeat(4, 100px);
+    grid-auto-rows: 100px;
+  }
+
+  .cards--large {
+    gap: 1.5rem;
+    grid-template-columns: repeat(6, 90px);
+    grid-auto-rows: 90px;
+  }
+}
+
+@media (min-width: 1025px) {
+  .cards--small {
+    grid-template-columns: repeat(3, 130px);
+    grid-auto-rows: 130px;
+  }
+
+  .cards--medium {
+    grid-template-columns: repeat(4, 110px);
+    grid-auto-rows: 110px;
+  }
+
+  .cards--large {
+    grid-template-columns: repeat(6, 100px);
+    grid-auto-rows: 100px;
+  }
 }
