--- a/src/@memo/ui-kit/components/CardItem/CardItem.module.css
+++ b/src/@memo/ui-kit/components/CardItem/CardItem.module.css
@@ -4,6 +4,7 @@
   background-color: var(--basic);
   border-radius: 50%;
   border: 0;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
   transition: all ease 0.5s;
 
   img {
@@ -11,6 +12,10 @@
     height: 100%;
     transition: all ease 0.5s;
   }
+}
+
+.card:hover {
+  background-color: var(--white);
 }
 
 .card.card_match {
