--- a/src/@memo/ui-kit/components/Container/Container.module.css
+++ b/src/@memo/ui-kit/components/Container/Container.module.css
@@ -1,24 +1,29 @@
 .container {
-  max-height: 100vh;
-  min-height: 100vh;
+  height: 100vh;
   max-width: 1216px;
   margin: 0 auto;
-  padding: 15px;
+  padding: 20px 100px;
+  background-color: var(--white);
 
   display: flex;
   flex-direction: column;
 
   @media (max-width: 1350.98px) {
     max-width: 900px;
+    padding: 15px 80px;
   }
 
   @media (max-width: 991.98px) {
     max-width: 750px;
-    padding: 10px;
+    padding: 10px 70px;
   }
 
   @media (max-width: 767.98px) {
     max-width: none;
-    padding: 10px;
+    padding: 5px 30px;
   }
+}
+
+.container-dark {
+  background-color: var(--dark);
 }
