--- a/src/@memo/ui-kit/components/Header/Header.module.css
+++ b/src/@memo/ui-kit/components/Header/Header.module.css
@@ -1,15 +1,15 @@
-@import '@memo/design/index.css';
-
 .header {
   display: grid;
   grid-template-columns: 10% 1fr 1fr;
   gap: 15px;
   align-items: center;
-  height: 123px;
+  min-height: 100px;
   width: 100%;
   text-align: center;
 
   @media (max-width: 767.98px) {
+    gap: 5px;
+    height: 80px;
     grid-template-columns: 1fr 1fr;
     :nth-child(1) {
       order: 2;
