--- a/src/@memo/ui-kit/components/Header/Logo/Logo.module.css
+++ b/src/@memo/ui-kit/components/Header/Logo/Logo.module.css
@@ -1,12 +1,20 @@
 .logo {
-  padding: 15px;
+  padding: 5px;
   font-size: 50px;
   font-weight: 400;
-  line-height: 77px;
+  line-height: 1.5;
   letter-spacing: 0em;
   color: var(--dark-pink);
 }
 
 .logo_dark {
   color: var(--red);
+  font-weight: 500;
+}
+
+@media (max-width: 767.98px) {
+  .logo,
+  .logo_dark {
+    font-size: 34px;
+  }
 }
