--- a/src/@memo/ui-kit/components/SwitchButton/SwitchButton.module.css
+++ b/src/@memo/ui-kit/components/SwitchButton/SwitchButton.module.css
@@ -15,6 +15,7 @@
     -webkit-transition: 0.4s;
     transition: 0.4s;
     border-radius: 34px;
+    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.3);
   }
 
   span:before {
