--- a/src/@memo/components/LevelsModal/LevelsModal.module.css
+++ b/src/@memo/components/LevelsModal/LevelsModal.module.css
@@ -3,17 +3,18 @@
   width: 166px;
   height: 200px;
   top: 80px;
-  right: 200px;
+  right: 250px;
   border-radius: 30px;
   z-index: 3;
   padding: 10px;
   background-color: var(--basic);
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 15px;
 
   @media (width < 767.98px) {
-    top: calc(50% - 50px);
+    top: calc(25% - 100px);
     right: calc(50% - 83px);
   }
 }
