--- a/src/@memo/pages/Home/components/Cards/Cards.module.css
+++ b/src/@memo/pages/Home/components/Cards/Cards.module.css
@@ -1,10 +1,8 @@
 .cards {
-  padding: 20px 0 10px;
   display: grid;
   justify-content: center;
   width: 100%;
   height: 100%;
-  gap: 1rem;
 
   img,
   div {
@@ -36,9 +34,10 @@
 }
 
 .cards--large {
-  gap: 1rem;
-  grid-template-columns: repeat(3, 60px);
-  grid-auto-rows: 60px;
+  padding-top: 40px;
+  gap: 1.3rem;
+  grid-template-columns: repeat(3, 70px);
+  grid-auto-rows: 70px;
 }
 
 @media (min-width: 767px) {
