--- a/src/@memo/components/CardItem/CardItem.module.css
+++ b/src/@memo/components/CardItem/CardItem.module.css
@@ -1,13 +1,19 @@
 .card {
-  width: 100%;
   height: 100%;
+  aspect-ratio: 1/1;
   background-color: var(--basic);
   border-radius: 50%;
   border: 0;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
   transition: all ease 0.5s;
 
-  img {
+  @media (min-width: 767px) {
+    height: unset;
+    width: 100%;
+  }
+
+  img,
+  div {
     width: 100%;
     height: 100%;
     transition: all ease 0.5s;
