--- a/src/@memo/components/Container/Container.module.css
+++ b/src/@memo/components/Container/Container.module.css
@@ -1,20 +1,21 @@
 .container {
   height: 100vh;
-  max-width: 1216px;
+  max-width: 80%;
   margin: 0 auto;
   padding: 20px 100px;
   background-color: var(--white);
 
-  display: flex;
+  display: grid;
+  grid-template-rows: 15% 77% 8%;
   flex-direction: column;
 
   @media (max-width: 1350.98px) {
-    max-width: 900px;
+    max-width: 90%;
     padding: 15px 80px;
   }
 
   @media (max-width: 991.98px) {
-    max-width: 750px;
+    max-width: 95%;
     padding: 10px 70px;
   }
 
