--- a/src/@memo/components/Header/Header.module.css
+++ b/src/@memo/components/Header/Header.module.css
@@ -1,24 +1,35 @@
 .header {
-  display: grid;
-  grid-template-columns: 10% 1fr 1fr;
-  gap: 15px;
-  align-items: center;
-  min-height: 100px;
   width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 10px;
+  align-items: center;
+  justify-content: center;
   text-align: center;
 
   @media (max-width: 767.98px) {
-    gap: 5px;
-    min-height: 80px;
     grid-template-columns: 1fr 1fr;
+    gap: 5px;
+
     :nth-child(1) {
       order: 2;
-      margin: 0 auto;
     }
+
     :nth-child(3) {
       grid-column: 1 / span 2;
       justify-self: center;
       order: 3;
     }
+  }
+}
+
+.header_isGameStarted {
+  grid-template-columns: 1fr 1fr;
+  :nth-child(1) {
+    order: 1;
+  }
+  :nth-child(2) {
+    order: 2;
+    justify-self: center;
   }
 }
