--- a/src/@memo/design/tools/reset.css
+++ b/src/@memo/design/tools/reset.css
@@ -60,10 +60,12 @@ body {
   font-family: 'Princess Sofia', sans-serif;
   font-weight: 400;
   font-size: 14px;
+  height: 100vh;
 }
 
 main {
-  flex: 1;
+  width: 100%;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
