--- a/src/@memo/pages/Home/components/Cards/Cards.module.css
+++ b/src/@memo/pages/Home/components/Cards/Cards.module.css
@@ -1,80 +1,67 @@
 .cards {
   display: grid;
-  justify-content: center;
-  width: 100%;
+  width: 90%;
   height: 100%;
-
-  img,
-  div {
-    width: 100%;
-    height: auto;
-    transition: all 0.5s ease;
-  }
-
-  div {
-    background-color: var(--basic);
-    border-radius: 50%;
-    border: 0;
-    aspect-ratio: 1 / 1;
-  }
+  padding-top: 20px;
 }
 
 .cards--small {
-  padding-top: 70px;
-  gap: 2rem;
-  grid-template-columns: repeat(2, 80px);
-  grid-auto-rows: 80px;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+
+  > div {
+    padding: 20px;
+  }
 }
 
 .cards--medium {
-  padding-top: 50px;
-  gap: 1.5rem;
-  grid-template-columns: repeat(3, 70px);
-  grid-auto-rows: 70px;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+  height: 100%;
+  aspect-ratio: 1/3;
+  padding: 50px 0;
+
+  > div {
+    padding: 10px;
+  }
+
+  button {
+    height: unset;
+    width: 100%;
+  }
 }
 
 .cards--large {
-  padding-top: 40px;
-  gap: 1.3rem;
-  grid-template-columns: repeat(3, 70px);
-  grid-auto-rows: 70px;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(6, 1fr);
+  max-width: 400px;
 }
 
 @media (min-width: 767px) {
   .cards--small {
-    padding-top: 50px;
-    gap: 3rem;
-    grid-template-columns: repeat(3, 110px);
-    grid-auto-rows: 110px;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    width: 70%;
   }
 
   .cards--medium {
-    padding-top: 30px;
-    gap: 2rem;
-    grid-template-columns: repeat(4, 100px);
-    grid-auto-rows: 100px;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    width: 60%;
   }
 
   .cards--large {
-    gap: 1.5rem;
-    grid-template-columns: repeat(6, 90px);
-    grid-auto-rows: 90px;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    max-width: 90%;
   }
 }
 
-@media (min-width: 1025px) {
-  .cards--small {
-    grid-template-columns: repeat(3, 130px);
-    grid-auto-rows: 130px;
-  }
-
-  .cards--medium {
-    grid-template-columns: repeat(4, 110px);
-    grid-auto-rows: 110px;
-  }
-
-  .cards--large {
-    grid-template-columns: repeat(6, 100px);
-    grid-auto-rows: 100px;
-  }
+.card_container {
+  width: 100%;
+  height: 100%;
+  padding: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
